--- a/package.json
+++ b/package.json
@@ -35,7 +35,8 @@
     "react": "^16.13.1",
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.5",
-    "styled-components": "^5.2.0"
+    "styled-components": "^5.2.0",
+    "axios": "^0.24.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
@@ -44,7 +45,7 @@
     "eslint": "^7.10.0",
     "eslint-plugin-react": "^7.21.3",
     "longjohn": "^0.2.12",
-    "ngrok": "^3.3.0",
+    "ngrok": "^4.3.0",
     "nodemon": "^2.0.4",
     "parcel-bundler": "^1.12.4",
     "parcel-plugin-externals": "^0.5.1",
