--- a/config.json
+++ b/config.json
@@ -76,5 +76,12 @@
             "*.jira.com"
         ]
     },
-    "product": "confluence"
+    "product": "confluence",
+    "docServer": {
+        "default": {
+            "adress": "https://docserver-example.com/",
+            "secret": "secret",
+            "authorizationHeader": "Authorization"
+        }
+    }
 }
