--- a/package.json
+++ b/package.json
@@ -36,7 +36,8 @@
     "react-dom": "^16.13.1",
     "sequelize": "^6.3.5",
     "styled-components": "^5.2.0",
-    "axios": "^0.24.0"
+    "axios": "^0.24.0",
+    "atlassian-jwt": "^2.0.0"
   },
   "devDependencies": {
     "@babel/core": "^7.11.6",
